--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,12 +9,15 @@ on:
 jobs:
       build-and-push:
         runs-on: ubuntu-latest
+        defaults:
+          run:
+            working-directory: ./src
         steps:
           - name: 'Checkout GitHub Action'
             uses: actions/checkout@main
 
           - name: 'Login to GitHub Container Registry'
-            uses: docker/login-action@v1
+            uses: docker/login-action@v3
             with:
               registry: ghcr.io
               username: ${{github.actor}}
