--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,12 @@ jobs:
           run:
             working-directory: ./src
         steps:
+          - name: Set up QEMU
+            uses: docker/setup-qemu-action@v3
+          
+          - name: Set up Docker Buildx
+            uses: docker/setup-buildx-action@v3
+        
           - name: 'Checkout GitHub Action'
             uses: actions/checkout@main
 
@@ -23,7 +29,9 @@ jobs:
               username: ${{github.actor}}
               password: ${{secrets.GHCR_TOKEN}}
 
-          - name: 'Build Inventory Image'
-            run: |
-              docker build . --tag ghcr.io/bruhtek/docker-certbot-dns-cloudflare:latest
-              docker push ghcr.io/bruhtek/docker-certbot-dns-cloudflare:latest
+          - name: Build and push
+            uses: docker/build-push-action@v6
+            with:
+              platforms: linux/amd64,linux/arm64
+              push: true
+              tags: ghcr.io/bruhtek/docker-certbot-dns-cloudflare:latest
