--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,7 @@ jobs:
           - name: Build and push
             uses: docker/build-push-action@v6
             with:
+              context: "{{defaultContext}}:src"
               platforms: linux/amd64,linux/arm64
               push: true
               tags: ghcr.io/bruhtek/docker-certbot-dns-cloudflare:latest
